# sheru

./: Cargo.toml  LICENSE
crates/sheru-cli/: Cargo.toml
crates/sheru-cli/src/: shell.rs
src/: main.rs
